--- a/project.config.json
+++ b/project.config.json
@@ -54,6 +54,12 @@
 					"name": "111",
 					"pathName": "pages/timetest/timetest",
 					"query": ""
+				},
+				{
+					"id": 4,
+					"name": "111",
+					"pathName": "pages/lookback/lookback",
+					"query": ""
 				}
 			]
 		}
